[project]
name = "sqlalchemy-aip160"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rob Clevenger", email = "rob@robsite.org" }
]
requires-python = ">=3.13"
dependencies = [
    "lark>=1.3.1",
    "sqlalchemy>=2.0.44",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
